--- a/templates/about-dialog.hbs
+++ b/templates/about-dialog.hbs
@@ -43,8 +43,8 @@
                 <th>{{localize "YCIO.About.Donate"}}</th>
                 <td>
                     <div class="donate-link">
-                        <a href="TODO_PATREON_URL" target="_blank" rel="noopener noreferrer" title="Patreon"><i
-                                class="fa-brands fa-patreon"></i><span>Patreon</span></a>
+                        <a href="https://www.patreon.com/YuukoTRPG" target="_blank" rel="noopener noreferrer"
+                            title="Patreon"><i class="fa-brands fa-patreon"></i><span>Patreon</span></a>
                     </div>
                 </td>
             </tr>
