補上倉庫連結與更新README

--- a/templates/about-dialog.hbs
+++ b/templates/about-dialog.hbs
@@ -15,7 +15,8 @@
             <tr>
                 <th>{{localize "YCIO.About.ProjectUrl"}}</th>
                 <td>
-                    <a href="TODO_GITHUB_URL" target="_blank" rel="noopener noreferrer">
+                    <a href="https://github.com/YuukoTRPG/yuuko-chat-interface-overhaul" target="_blank"
+                        rel="noopener noreferrer">
                         <i class="fa-brands fa-github"></i> {{localize "YCIO.About.ProjectLink"}}
                     </a>
                 </td>
